# BraceExpander

./: CMakeLists.txt  README.md  readme.md
expander/src/: Expander.cpp  Expander.h  Expander.h~
expander/tests/: CMakeLists.txt  tests.cpp
main/: main.cpp
